--- a/index.html
+++ b/index.html
@@ -43,10 +43,12 @@
     <!-- SLIDES -->
     <slide class="" id="slide-1" style="background:;">
   <hgroup>
-    <h2>Prompt</h2>
+    <h2>The Challenge</h2>
   </hgroup>
   <article data-timings="">
     <p>Using publically available data, evaluate and understand the rise and fall of sheep populations in 5 major sheep producing nations over the last quarter century.</p>
+
+<p>You should be able to observe changes in sheep populations between the countries by changing the date slider.</p>
 
   </article>
   <!-- Presenter Notes -->
@@ -107,7 +109,7 @@
     <ul>
       <li>
       <a href="#" target="_self" rel='tooltip' 
-        data-slide=1 title='Prompt'>
+        data-slide=1 title='The Challenge'>
          1
       </a>
     </li>
